Back to where I was last time

--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-three-fiber": "^4.2.8",
+    "react-three-gui": "^0.1.5",
+    "simplex-noise": "^2.4.0",
+    "three": "^0.117.1"
   },
   "scripts": {
     "start": "react-scripts start",
