--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
   "name": "terrain-fiber",
-  "version": "0.1.0",
-  "private": true,
+  "version": "0.1.1",
+  "description": "Terrain generator, using react-three-fiber",
+  "author": "Samuel Newman",
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
