--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Samuel Newman",
   "license": "MIT",
   "dependencies": {
+    "@react-three/drei": "^4.0.3",
     "@react-three/fiber": "^6.0.6",
     "leva": "^0.8.4",
     "react": "^17.0.2",
